--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .nav {
 	position: relative;
-	width: 1120px;
+	width: 1200px;
 	margin: auto;
 	height:50px;
 
@@ -21,9 +21,10 @@
 .nav ul {
   zoom: 1;
   position:absolute;
-  top:175px;
+  top:150px;
   list-style: none; 
   padding: 0;
+	font-weight: 900;
 }
 .nav ul:before,
 .nav ul:after {
@@ -62,7 +63,7 @@ padding-bottom: 10px;
 
 /* Sub nav bars (Drop Down styling) */
 .nav li ul li {
-  width: 200px;
+  width: 250px;
   height: 50px;
   padding-top: 0px;
   border-style: outset;
@@ -84,7 +85,7 @@ padding-bottom: 10px;
 .nav li ul {
   position: absolute;
   left: 0 px;
-  top: 36px;
+  top: 30px; /* This will set distance from drop down to text*/
   z-index: 1;
   max-height: 0;
   overflow: hidden;
@@ -121,11 +122,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     margin-left: auto;
 }
 .navItem {
-	font-family: fantasy;
-	font-size: 24px;
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
 	font-variant: normal;
-	font-weight: 500;
+	font-weight: 900;
 	line-height: 26.4px;
 	color:blue;
 }
@@ -159,3 +160,157 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     background-color: #92a2bd;
 	color: black;
 }
+
+
+
+/* Help Button Functionality */
+.needHelpButton {
+    border: none;
+    color: black;
+	margin-bottom: 100px;
+    padding: 20px 50px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+	border-radius: 15px;
+	background: rgba(67,43,4,1);
+	background: -moz-linear-gradient(top, rgba(67,43,4,1) 0%, rgba(209,159,123,1) 54%, rgba(209,159,123,1) 63%, rgba(116,63,7,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(67,43,4,1)), color-stop(54%, rgba(209,159,123,1)), color-stop(63%, rgba(209,159,123,1)), color-stop(100%, rgba(116,63,7,1)));
+	background: -webkit-linear-gradient(top, rgba(67,43,4,1) 0%, rgba(209,159,123,1) 54%, rgba(209,159,123,1) 63%, rgba(116,63,7,1) 100%);
+	background: -o-linear-gradient(top, rgba(67,43,4,1) 0%, rgba(209,159,123,1) 54%, rgba(209,159,123,1) 63%, rgba(116,63,7,1) 100%);
+	background: -ms-linear-gradient(top, rgba(67,43,4,1) 0%, rgba(209,159,123,1) 54%, rgba(209,159,123,1) 63%, rgba(116,63,7,1) 100%);
+	background: linear-gradient(to bottom, rgba(67,43,4,1) 0%, rgba(209,159,123,1) 54%, rgba(209,159,123,1) 63%, rgba(116,63,7,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#432b04', endColorstr='#743f07', GradientType=0 );		
+}
+.buttonContainer{
+	height: 100px;
+	width: 200px;
+	position: relative;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+.submittButton {
+    background-color: #d56344 ;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border-style: solid;
+	border-width: 10px;
+	border-color: #425262;
+    cursor: pointer;
+    width: 100%;
+}
+
+.submittButton:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+.container {
+	color: white;
+	position: relative;
+	min-width: 380px;
+}
+
+.containerBorder{
+	border-radius: 20px;	
+		background-color: #2b3642;
+		padding: 10px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 10; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #2b3642;
+    margin: auto auto auto auto; /* 5% from the top, 15% from the bottom and centered */
+    border: none;
+    width: 50%; /* Could be more or less, depending on screen size */
+	min-width: 400px;
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 0px;
+    top: -20px;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+}
+    
+@keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+}
+
