--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 }
 
 #mainPage {
-	background-color: white; 
-	height: 1500px; 
+	background-color: white;  
 	width: 1150px; 
 	margin-top: 50px;
     margin-bottom: 100px;
@@ -332,8 +331,21 @@ span.psw {
     to {transform: scale(1)}
 }
 
+.videoBox{
+	width:560; 
+	height:315; 
+	border:none;
+	overflow:hidden; 
+	scrolling:no;
+	frameborder:0; 
+	allowTransparency:true;
+	allowFullScreen:true;
+	
+	
+}
+
 /* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 799px) {
     span.psw {
        display: block;
        float: none;
@@ -341,5 +353,54 @@ span.psw {
     .cancelbtn {
        width: 100%;
     }
+	
+	#mainPage{
+		width: 90%
+	}
+
+#mainPage p {
+	font-size: 9px;
+	width: 90%;
+}
+
+#mainPage a {
+	font-size: 9px;
+	width: 90%;
+}
+
+#mainPage h1 {
+	font-size: 30px;
+	font-weight: bold;
+}
+}
+
+@media screen and (max-width: 479px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+	
+	#mainPage{
+		width: 50%
+	}
+
+#mainPage p {
+	font-size: 9px;
+	width: 50%;
+}
+
+#mainPage a {
+	font-size: 9px;
+	width: 50%;
+}
+
+#mainPage h1 {
+	font-size: 15px;
+	font-weight: bold;
+}
+
 }
 
