added our_purpose, news page. Revised the styling the of the nav bar and page headers

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@
 	padding-top:0px;
 }
 
+.content-font-index {
+	font-size: 200%;
+}
+.white-font:{
+	color: white;
+}
 
 .dark-blue{
 background-color: #2b3642;
